# cmake_test

./: CMakeLists.txt
test_cmake/: main.cpp  test.cpp
